# ssl-refbox

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.win32  README-LINUX.txt  README-WIN32.txt  README.md  README.txt  addrinfolist.cc  addrinfolist.h  commands.h  configuration.cc  configuration.h  dialog_gameover.cc  dialog_gameover.h  double.conf  download.html  exception.cc  exception.h  faq.html  frame_log.cc  frame_log.h  gameEvent.proto  game_event.proto  gamecontrol.cc  gamecontrol.h  gamecontroller.cc  gamecontroller.h  gameinfo.cc  gameinfo.h  getopt.cc  getopt.h  index.html  install.html  installDeps.sh  legacy-protocol.html  legacypublisher.cc  legacypublisher.h  logger.cc  (+43 more)
client/: Makefile  testclient.cc
old-releases/: sslrefbox_2007.1svn_i386-edgy.deb  sslrefbox_2007.1svn_i386-etch.deb  sslrefbox_2007.1svn_i386-feisty.deb  sslrefbox_2007.1svn_i386-sarge.deb  sslrefbox_2007.1svn_i386.deb  sslrefbox_2010.2-1_i386.deb
rcon-client/: Makefile  rconclient.cc
scoreboard/: Makefile  addrinfolist.cc  addrinfolist.h  exception.cc  exception.h  gamestate.cc  gamestate.h  imagedb.cc  imagedb.h  main.cc  mainwindow.cc  mainwindow.h  noncopyable.h  scoreboard.conf  socket.cc  socket.h
